[tool.poetry]
name = "rec-game"
version = "0.1.0"
description = ""
authors = ["Otavio Almeida <otavioalmeida650@gmail.com>"]
readme = "README.md"
packages = [{include = "rec_game"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
